# fit-webview-bridge

./: .clang-format  .gitignore  CMakeLists.txt  README.it.md  README.md  pyproject.toml
.github/workflows/: ci-macos.yml  wheels-macos.yml
bindings/pyside6/macos/: CMakeLists.txt  typesystem_systemwebview.xml  typesystem_wkwebview.xml
cmake/: macos_toolchain_compat.h
examples/macos/: wkwebview_demo.py
fit_webview_bridge/: __init__.py
scripts/macos/: bootstrap_macos.sh  build_smoke_macos.sh  check_quality.sh  ci_local_macos.sh  format_macos.sh
src/macos/: CMakeLists.txt  DownloadInfo.h  SystemWebViewWidget.h  SystemWebViewWidget.mm  WKWebViewWidget.h  WKWebViewWidget.mm
tests/: _qt_test_utils.py  conftest.py
tests/macos/contract/: test_wkwebview_contract.py
tests/macos/e2e/: test_wkwebview_e2e.py
tests/macos/integration/: test_wkwebview_integration.py
tests/macos/unit/: test_package_bootstrap.py
tests/unit/: test_package_bootstrap.py
