[project]
name = "fit-webview-bridge"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = ["PySide6==6.9.0", "shiboken6==6.9.0"]
readme = "README.it.md"
license = {text = "LGPL-3.0-or-later"}

[build-system]
requires = [
  "scikit-build-core>=0.9",
  "cmake>=3.26",
  "ninja",
  "PySide6==6.9.0",    # <-- necessari nel build env
  "shiboken6==6.9.0",   # <--
  "shiboken6-generator==6.9.0"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["fit_webview_bridge"]
cmake.build-type = "Release"
cmake.define = { FITWVB_VENDORIZE = "ON" }

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]

[tool.cibuildwheel.macos]
archs = ["arm64"]
repair-wheel-command = ""