[project]
name = "fit-webview-bridge"
version = "1.0.0-rc2"
description = "Qt native WebView bridge with PySide6 bindings"
requires-python = ">=3.11,<3.14"
dependencies = ["PySide6==6.9.0", "shiboken6==6.9.0", "shiboken6-generator==6.9.0"]
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
authors = [{ name = "FIT Project" }]
urls = { Homepage = "https://github.com/fit-project/fit-webview-bridge" }

[build-system]
requires = [
  "scikit-build-core>=0.9",
  "cmake>=3.26",
  "ninja",
  "PySide6==6.9.0",
  "shiboken6==6.9.0",
  "shiboken6-generator==6.9.0"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["fit_webview_bridge"]
cmake.build-type = "Release"
cmake.define = { FITWVB_VENDORIZE = "ON" }

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]

[tool.cibuildwheel.macos]
archs = ["arm64"]
repair-wheel-command = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast unit tests",
  "contract: contract tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
]
